@@ -1,6 +1,8 @@
 DIST pclean-0.7.tar.bz2 10763 RMD160 bda5c275a807a7541e484a0032823e1e6b4e925c SHA1 fb59c15cae680ee427c5799cad0e9cbf72471da3 SHA256 58a162afe5c61beedc0c5b81917071a96e01ea266d75c0f4fe47e6ee166568e2
 DIST pclean-0.8.tar.bz2 10396 RMD160 b974bde0f05aa8ae10f80750c33543f40bd6d218 SHA1 312e1d425c7ef28cfb100e02611a73190e6852b3 SHA256 5c535a2e3b3b400f08d18081a0b0a7093c716ae42dc022e1e453dfa0cf01a8dc
+DIST pclean-0.9.tar.bz2 10416 RMD160 7f85e9d7e75d8db4e47f97192764962871fc5bd8 SHA1 fbb94362f57c9f70c8e3f91732a35e1c6d6435d1 SHA256 6ea07c7bb21acdfbef00837e4275b461c673e9042293424a0664e3f6f09d9caa
 EBUILD pclean-0.7.ebuild 686 RMD160 3c029e79d7c903720631a79ba88939f16ee4e8e5 SHA1 e260956a25fde9034766a41c4649946c6475b0d6 SHA256 dbbdfe26b5d33eb80a46ee24d40ef1bb34df7790df908c45196191a471d2d81d
 EBUILD pclean-0.8.ebuild 709 RMD160 49949828439d844e9a699e64fb5894aee406d7b1 SHA1 7cbf35ca6d2824c0da3eac2d8e11bc8f5534dd04 SHA256 c5ae3cde6486e2b07d9bb917e79e8d97b542f425fcd2c77bca4b5e0382e8b74b
-MISC ChangeLog 732 RMD160 17339b8b47b1eaae9956977a8e27d4957368306e SHA1 b31f5e22266a6350ee37e8fae56c51a23064a709 SHA256 aa2974ac444fcac5e0b227a42281916b421fb480c80307532ace1d29b94f8268
+EBUILD pclean-0.9.ebuild 709 RMD160 49949828439d844e9a699e64fb5894aee406d7b1 SHA1 7cbf35ca6d2824c0da3eac2d8e11bc8f5534dd04 SHA256 c5ae3cde6486e2b07d9bb917e79e8d97b542f425fcd2c77bca4b5e0382e8b74b
+MISC ChangeLog 837 RMD160 693289b41cac9ac600d05ec83b1f9787b9951a8c SHA1 d0404551973e9877be83eb92ec75e16f65e38e72 SHA256 a285bea55faff9f7fbb57a2f1a9d37eb0528da819831987c620d7ec036a086f8
 MISC metadata.xml 299 RMD160 100c4374c3be1b0f7f5471dd57b659d3fc6c4eed SHA1 01b95381417d2dce7668a8aab425daee94550186 SHA256 d8e113548c5c418f482af3e1a1b89b2408e2377ece82ae9b6ae46e60d21704d2
